--- a/portfolio.html
+++ b/portfolio.html
@@ -27,11 +27,11 @@
       <section>
         <h1 hidden>Портфоліо</h1>
         <ul>
-          <li class="filter-button"><button type="button">Усі</button></li>
-          <li class="filter-button"><button type="button">Веб-сайти</button></li>
-          <li class="filter-button"><button type="button">Додатки</button></li>
-          <li class="filter-button"><button type="button">Дизайн</button></li>
-          <li class="filter-button"><button type="button">Маркетинг</button></li>
+          <li class="link"><button type="button" class="filter-button">Усі</button></li>
+          <li class="link"><button type="button" class="filter-button">Веб-сайти</button></li>
+          <li class="link"><button type="button" class="filter-button">Додатки</button></li>
+          <li class="link"><button type="button" class="filter-button">Дизайн</button></li>
+          <li class="link"><button type="button" class="filter-button">Маркетинг</button></li>
         </ul>
        
         <ul>
